# PiGauge

./: Cargo.toml  README.md
scripts/: pigauge-chromium-kiosk.sh
src/: main.rs  obd.rs  power.rs  ui.rs
systemd/: pigauge-kiosk.desktop  pigauge-kiosk.service  pigauge-powerwatch.service  pigauge-ui.service
web/: app.js  index.html  scene.js  style.css
