 [package]
 name = "pigauge"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 clap = { version = "4", features = ["derive", "env"] }
 log = "0.4"
 env_logger = "0.11"
 serialport = "4"
 sdl2 = { version = "0.37", features = ["ttf"] }
 
