[package]
name = "pigauge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
serialport = "4"
gpio-cdev = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tungstenite = "0.24"
